[gd_scene load_steps=3 format=3 uid="uid://bc4ks0b520sf2"]

[ext_resource type="Script" uid="uid://7t5xs3156plg" path="res://Powers/Mini Power/mini_shroom.gd" id="1_xmexi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dljp4"]

[node name="mini_shroom" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_xmexi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dljp4")

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
